# conan-3ds

./: .conanignore  Readme.md
examples/3dsapp_textured_cube/: CMakeLists.txt  Readme.md  conanfile.txt
examples/3dsapp_textured_cube/source/: main.c
extensions/commands/: cmd_install_3ds.py  cmd_run_3ds.py  cmd_setup_3ds.py
extensions/deployers/: 3ds_symlink_deploy.py  3ds_tool_symlink_deploy.py
install/extensions/commands/: cmd_install_3ds.py  cmd_setup_3ds.py
install/profiles/: devkitarm
profiles/: devkitarm
